[FIX] navbar items y botón de registrar perro

--- a/src/OMD/OMDApp/templates/dogs/mis_perros.html
+++ b/src/OMD/OMDApp/templates/dogs/mis_perros.html
@@ -31,5 +31,6 @@
     </div>
     {% endfor %}
   </div>
+  <a href="{% url 'registerSingleDog' %}" class="btn btn-secondary">Registrar perro</a>
 </div>
 {% endblock %}
