--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -36,7 +36,7 @@
                 <li><a class="dropdown-item" href="/">Cuidadores</a></li>
             </ul>
           </li>
-
+          {% if user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="margin-left: 0%;">
               Turnos
@@ -47,7 +47,7 @@
             <li><a class="dropdown-item" href="/">Mis turnos</a></li>
             {% endif %}
             {% if perms.OMDApp.is_vet %}
-            <li><a class="dropdown-item" href="/">Turnos pendientes</a></li>
+            <li><a class="dropdown-item" href="{% url 'acceptTurn' %}">Turnos pendientes</a></li>
             <li><a class="dropdown-item" href="/">Turnos Aceptados</a></li>
             {% endif %}
             </ul>
@@ -60,7 +60,7 @@
           <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Nosotros</a>
           </li>
-          
+          {% endif %}
           <div class="vr"></div>
           {% if user.is_authenticated %}
           <li class="nav-item dropdown">
