--- a/src/OMD/OMDApp/templates/turns/acceptTurns.html
+++ b/src/OMD/OMDApp/templates/turns/acceptTurns.html
@@ -6,24 +6,23 @@
 
 {% block title %} Turnos pendientes {% endblock title %}
 {% block content %}
-<div class="container d-flex flex-column justify-content-center mt-5 mb-5 align-items-center">
-    <h1 class="text-center fw-semibold mb-4">Turnos pendientes</h1>
-    <div class="row justify-content-center mt-3">
-      {% for turn in turn_list %}
-        <div class="card h-100">
-          <div class="card-body">
-            <h5 class="card-title text-center"><strong>{{ turn.type }}</strong></h5>
-            <div class="card-text">
-              <p><strong>Fecha:</strong> {{ turn.date }}</p>
-              <p><strong>Motivo:</strong> {{ turn.motive }} </p>
-              <div class="card-footer bg-white text-center">
-                <a href="/" class="btn btn-primary">Aceptar</a>
-              </div>
+{% if turn_list %}
+  <div class="container d-flex flex-column justify-content-center mb-3">
+      <h1 class="text-center fw-semibold mb-4">Turnos pendientes</h1>
+        {% for turn in turn_list %}
+          <div class="card mt-3 border-secondary ">
+            <h5 class="card-header">Tipo de turno: <strong>{{ turn.type }}</strong></h5>
+            <div class="card-body">
+              <h5 class="card-title"><strong>Fecha:</strong> {{ turn.date }}</h5>
+              <p class="card-text"><strong>Motivo:</strong> {{ turn.motive }} </p>
+              <button class="btn btn-primary" type="submit">Aceptar</button>
+              <button class="btn btn-secondary" type="submit">Rechazar</button>
             </div>
           </div>
-        </div>
+        {% endfor %}
       </div>
-      {% endfor %}
     </div>
-  </div>
+{% else %}
+  <h1 class="text-center fw-semibold mb-4">No hay turnos pendientes</h1>
+{% endif %}
 {% endblock content %}
