--- a/src/OMD/OMDApp/templates/turns/acceptTurns.html
+++ b/src/OMD/OMDApp/templates/turns/acceptTurns.html
@@ -8,15 +8,19 @@
 {% block content %}
 {% if turn_list %}
   <div class="container d-flex flex-column justify-content-center mb-3">
-      <h1 class="text-center fw-semibold mb-4">Turnos pendientes</h1>
+      <h1 class="text-center fw-semibold mb-4">Turnos {% if pending %}pendientes{% else %}aceptados{% endif %}</h1>
         {% for turn in turn_list %}
           <div class="card mt-3 border-secondary ">
             <h5 class="card-header">Tipo de turno: <strong>{{ turn.type }}</strong></h5>
             <div class="card-body">
               <h5 class="card-title"><strong>Fecha:</strong> {{ turn.date }}</h5>
               <p class="card-text"><strong>Motivo:</strong> {{ turn.motive }} </p>
-              <button class="btn btn-primary" type="submit">Aceptar</button>
-              <button class="btn btn-secondary" type="submit">Rechazar</button>
+              {% if pending %}
+                <a href="{% url 'acceptTurn' turn_id=turn.id %}" class="btn btn-primary-custom">Aceptar</a>
+                <a href="{% url 'rejectTurn' turn_id=turn.id %}" class="btn btn-secondary">Rechazar</a>
+              {% else %}
+                <a href="/" class="btn btn-primary-custom">Atender</a>
+              {% endif %}
             </div>
           </div>
         {% endfor %}
