[ADD] orden de listados de turnos y arreglos menores a su html

--- a/src/OMD/OMDApp/static/css/form.css
+++ b/src/OMD/OMDApp/static/css/form.css
@@ -2,11 +2,14 @@
     .form_width{
         width: 90%;
     }
+    .button-height-custom{
+        height: 40px !important;
+    }
 }
 
 @media screen and (min-width: 768px){
     .form_width{
-        width: 57%;
+        width: 75%;
     }
 }
 
