--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -20,7 +20,7 @@
                   <li><a class="dropdown-item" href="{% url 'my_dogs' %}">Mis perros</a></li>
                 {% endif %}
                 {% if perms.OMDApp.is_client or perms.OMDApp.is_vet %}
-                  <li><a class="dropdown-item" href="/">Perros en adopción</a></li> <!--clivet-->
+                  <li><a class="dropdown-item" href="{% url 'adoption_dog_list' %}">Perros en adopción</a></li> <!--clivet-->
                 {% endif %}
                 <li><a class="dropdown-item" href="/">Perros encontrados</a></li>
                 <li><a class="dropdown-item" href="/">Perros perdidos</a></li>
