--- a/src/OMD/OMDApp/templates/accounts/edit_password.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_password.html
@@ -5,14 +5,28 @@
 {% endblock css %}
 
 {% block content %} 
-<!--Edit password--> 
+<!--Register--> 
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
-		<h1 class="text-center fw-semibold mb-4">Cambiando contraseña</h1>
+		<h1 class="text-center fw-semibold mb-4">Editando perfil</h1>
 		<form method="POST">
 			{% csrf_token %}
 
-			{% include 'form_iterator.html' with form=form %}
+			<i class="bi bi-eye-slash" id="togglePassword"></i>
+			{% for field in form %}
+				<div class="mb-3">
+					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+					<input type="password" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
+						name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+						{% if field.value %} value="{{ field.value }}" {% endif %}>
+					{% if field.help_text %}
+						<small class="form-text text-muted">{{ field.help_text }}</small>
+					{% endif %}
+					{% for error in field.errors %}
+						<small class="form-text text-danger">{{ error|escape }}</small>
+					{% endfor %}
+				</div>
+			{% endfor %}
 
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
                 <button class="btn btn-primary" type="submit">Aceptar</button>
@@ -26,3 +40,29 @@
 	</div>
 </body>
 {% endblock %}
+
+{% block js %}
+<!--https://www.geeksforgeeks.org/how-to-toggle-password-visibility-in-forms-using-bootstrap-icons/-->
+<script>
+	const togglePassword = document.querySelector('#togglePassword');
+	const password = document.querySelector('#id_password');
+	const new_password = document.querySelector('#id_new_password');
+	const repeat_new_password = document.querySelector('#id_repeat_new_password');
+	togglePassword.addEventListener('click', (e) => {
+		const type = password.getAttribute('type') === 'password' ?	'text' : 'password';
+		password.setAttribute('type', type);
+		new_password.setAttribute('type', type);
+		repeat_new_password.setAttribute('type', type);
+		// Toggle the eye and bi-eye icon
+		const icon = $('#togglePassword').attr("class").includes("slash")
+		
+		if (icon){
+			$('#togglePassword').removeClass("bi bi-eye-slash");
+			$('#togglePassword').addClass("bi bi-eye");
+		} else {
+			$('#togglePassword').removeClass("bi bi-eye");
+			$('#togglePassword').addClass("bi bi-eye-slash");
+		}
+	});
+</script>
+{% endblock js %}
