--- a/src/OMD/OMDApp/templates/accounts/login.html
+++ b/src/OMD/OMDApp/templates/accounts/login.html
@@ -1,7 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block css %}
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="{% static 'css/form.css' %}">
+	<style>
+		
+	</style>
 {% endblock css %}
 
 {% block content %}
@@ -11,13 +15,14 @@
 		<h1 class="text-center fw-semibold mb-4 pt-4">Inicio de sesión</h1>
 		<form method="POST">
 			{% csrf_token %}
-			<div class="form-floating mb-3">
-				<input type="username" name="username" id="floatingInput" class="form-control" placeholder="Email" required>
-				<label for="floatingInput">Email</label>
+			<div class="input-container mb-3">
+				<label for="input">Email</label>
+				<input type="username" name="username" id="input" class="form-control" placeholder="Email" required>
 			</div>
-			<div class="form-floating mb-3">
-				<input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Contraseña" required>
-				<label for="floatingPassword" >Contraseña</label>
+			<div class="input-container mb-3">
+				<label for="password" >Contraseña</label>
+				<i class="bi bi-eye-slash" id="togglePassword"></i>
+				<input type="password" name="password" class="form-control" id="password" placeholder="Contraseña" required>
 			</div>
 
 			
@@ -33,6 +38,24 @@
 
 {% endblock %}
 
-<style>
-
-</style>
+{% block js %}
+<!--https://www.geeksforgeeks.org/how-to-toggle-password-visibility-in-forms-using-bootstrap-icons/-->
+<script>
+	const togglePassword = document.querySelector('#togglePassword');
+	const password = document.querySelector('#password');
+	togglePassword.addEventListener('click', (e) => {
+		const type = password.getAttribute('type') === 'password' ?	'text' : 'password';
+		password.setAttribute('type', type);
+		// Toggle the eye and bi-eye icon
+		const icon = $('#togglePassword').attr("class").includes("slash")
+		
+		if (icon){
+			$('#togglePassword').removeClass("bi bi-eye-slash");
+			$('#togglePassword').addClass("bi bi-eye");
+		} else {
+			$('#togglePassword').removeClass("bi bi-eye");
+			$('#togglePassword').addClass("bi bi-eye-slash");
+		}
+	});
+</script>
+{% endblock js %}
