[ADD] foto de perfil de usuario

--- a/src/OMD/OMDApp/templates/accounts/edit_profile.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_profile.html
@@ -9,7 +9,7 @@
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
 		<h1 class="text-center fw-semibold mb-4">Editando perfil</h1>
-		<form method="POST">
+		<form method="POST" enctype="multipart/form-data">
 			{% csrf_token %}
 
 			{{ form.as_p }}
