--- a/src/OMD/OMDApp/templates/dogs/mis_perros.html
+++ b/src/OMD/OMDApp/templates/dogs/mis_perros.html
@@ -13,11 +13,7 @@
       <div class="col-sm-6 col-md-4 col-lg-3 mb-4">
     {% endif %}
       <div class="card h-100">
-        {% if dog.photo %}
-          <img class="card-img-top img-fluid" src="{{ dog.photo }}" alt="{{ dog.name }}">
-        {% else %}
-          <img class="card-img-top img-fluid" src="{% static 'img/dog-default.png' %}" alt="{{ dog.name }}">
-        {% endif %}
+        <img class="card-img-top img-fluid" src="{{ dog.photo }}" alt="Foto de {{ dog.name }}">
         <div class="card-body">
           <h5 class="card-title text-center"><strong>{{ dog.name }}</strong></h5>
           <div class="card-text">
