--- a/src/OMD/OMDApp/templates/dogs/profile.html
+++ b/src/OMD/OMDApp/templates/dogs/profile.html
@@ -9,6 +9,11 @@
 {% block content %}
 <div class="container py-5 form_width mb-5">
   <h1 class="text-center fw-semibold mb-4">Perfil de {{ dog.name }}</h1>
+  {% if dog.image %}
+  <div class="mb-3 text-center">
+    <img src="{{ dog.image.url }}" alt="Foto de perfil de perro" width=250 >
+  </div>
+  {% endif %}
   <div class="mb-3">
     <label for="first_name" class="form-label">Nombre:</label>
     <input type="text" class="form-control" id="name" value="{{ dog.name }}" disabled>
