[FIX] arreglos menores charlados con juani

--- a/src/OMD/OMDApp/templates/dogs/adoption/request_adoption.html
+++ b/src/OMD/OMDApp/templates/dogs/adoption/request_adoption.html
@@ -8,7 +8,7 @@
 <!--Register--> 
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
-		<h1 class="text-center fw-semibold mb-4">Registro de perro en adopción</h1>
+		<h1 class="text-center fw-semibold mb-4">Solicitud de adopción</h1>
 		<form method="POST" novalidate>
 			{% csrf_token %}
 
