[FIX] saco ojo en cambiar contraseña y arreglo form_iterator

--- a/src/OMD/OMDApp/templates/accounts/edit_password.html
+++ b/src/OMD/OMDApp/templates/accounts/edit_password.html
@@ -12,7 +12,6 @@
 		<form method="POST">
 			{% csrf_token %}
 
-			<i class="bi bi-eye-slash" id="togglePassword"></i>
 			{% for field in form %}
 				<div class="mb-3">
 					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
@@ -23,7 +22,7 @@
 						<small class="form-text text-muted">{{ field.help_text }}</small>
 					{% endif %}
 					{% for error in field.errors %}
-						<small class="form-text text-danger">{{ error|escape }}</small>
+						<small class="form-text text-danger">{{ error|escape|linebreaks }}</small>
 					{% endfor %}
 				</div>
 			{% endfor %}
