--- a/src/OMD/OMDApp/templates/form_iterator.html
+++ b/src/OMD/OMDApp/templates/form_iterator.html
@@ -1,21 +1,21 @@
 {% for field in form %}
     <div class="mb-3">
         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-        {% if field.field.widget.input_type == 'date' %}
-            <input type="text" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
-                name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
-                {% if field.value %} value="{{ field.value|date:'d/m/Y' }}" {% endif %}
-            >
-        {% else %}
-            <input type="{{ field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
-                name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
-                {% if field.value %} value="{{ field.value }}" {% endif %}>
-        {% endif %}
+        <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
+            name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+            {% if field.value %} value="{{ field.value }}" {% endif %}>
         {% if field.help_text %}
             <small class="form-text text-muted">{{ field.help_text }}</small>
         {% endif %}
         {% for error in field.errors %}
-            <small class="form-text text-danger">{{ error|escape }}</small>
+            <small class="form-text text-danger">{{ error|escape|linebreaks }}</small>
         {% endfor %}
     </div>
 {% endfor %}
+
+{% if form.instance.birthdate %}
+    <script>
+        // Set the value for the birthdate input field
+        document.getElementById("inputBirthdate").value = "{{ form.instance.birthdate }}";
+    </script>
+{% endif %}
