--- a/src/OMD/OMDApp/templates/footer.html
+++ b/src/OMD/OMDApp/templates/footer.html
@@ -2,20 +2,7 @@
 {% load static %}
 <footer class="footer text-center text-lg-start bg-light text-muted position-relative bottom-0 top-0 w-100">
   <div class="d-flex justify-content-center p-3 border-bottom">
-    <div class="me-5 d-none d-lg-block">
-      <span>Redes sociales:</span>
-    </div>
-    <div class="d-flex justify-content-between align-items-center" style="min-width:100px;">
-      <a target="_blank" href="" class="text-reset">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a target="_blank" href="" class="text-reset">
-        <i class="bi bi-twitter"></i>
-      </a>
-      <a target="_blank" href="" class="text-reset">
-        <i class="bi bi-instagram"></i>
-      </a>
-    </div>
+    
   </div>
   <section class="">
     <div class="container text-center text-md-start mt-4">
@@ -33,7 +20,7 @@
 
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
           <h6 class="text-uppercase fw-bold mb-4">Contacto</h6>
-          <p><i class="bi bi-house me-3"></i>La Plata, Plaza Italia</p>
+          <p><i class="bi bi-house me-3"></i>La Plata</p>
           <p><i class="bi bi-phone me-3"></i>(0221) 487-0193</p>
         </div>
       </div>
