--- a/src/OMD/OMDApp/templates/accounts/register.html
+++ b/src/OMD/OMDApp/templates/accounts/register.html
@@ -12,7 +12,7 @@
 		<form method="POST" enctype="multipart/form-data" novalidate>
 			{% csrf_token %}
 
-			{{ register_form.as_p }}
+			{% include 'form_iterator.html' with form=register_form %}
 			
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
 				<button class="btn btn-primary" type="submit">{% if dog_register %}Registrar{% else %}Continuar{% endif %}</button>
