--- a/src/OMD/OMDApp/templates/dogs/edit_profile.html
+++ b/src/OMD/OMDApp/templates/dogs/edit_profile.html
@@ -12,7 +12,7 @@
 		<form method="POST" enctype="multipart/form-data" novalidate>
 			{% csrf_token %}
 			
-			{{ form.as_p }}
+			{% include 'form_iterator.html' with form=form %}
 			
 			<div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
 				<button class="btn btn-primary" type="submit">Aceptar</button>
