--- a/src/OMD/OMDApp/templates/form_iterator.html
+++ b/src/OMD/OMDApp/templates/form_iterator.html
@@ -1,9 +1,15 @@
 {% for field in form %}
     <div class="mb-3">
         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
-        <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
-            name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
-            {% if field.value %} value="{{ field.value }}" {% endif %}>
+        {% if field.field.widget.input_type == 'date' %}
+            <input type="date" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
+                    name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+                    {% if field.value %} value="{{ field.value|date:'Y-m-d' }}" {% endif %}>
+        {% else %}
+            <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
+                name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+                {% if field.value %} value="{{ field.value }}" {% endif %}>
+        {% endif %}
         {% if field.help_text %}
             <small class="form-text text-muted">{{ field.help_text }}</small>
         {% endif %}
@@ -12,10 +18,3 @@
         {% endfor %}
     </div>
 {% endfor %}
-
-{% if form.instance.birthdate %}
-    <script>
-        // Set the value for the birthdate input field
-        document.getElementById("inputBirthdate").value = "{{ form.instance.birthdate }}";
-    </script>
-{% endif %}
