[ADD] atención de turno genérico

--- a/src/OMD/OMDApp/templates/turns/turn_list.html
+++ b/src/OMD/OMDApp/templates/turns/turn_list.html
@@ -25,7 +25,7 @@
                     <a href="{% url 'acceptTurn' turn_id=turn.id %}" class="btn btn-primary-custom">Aceptar</a>
                     <a href="{% url 'rejectTurn' turn_id=turn.id %}" class="btn btn-secondary">Rechazar</a>
                   {% elif turns == "A" and turn.state != "AC" %}
-                    <a href="/" class="btn btn-primary-custom">Atender</a>
+                    <a href="{% url 'attendTurnView' turn_id=turn.id %}" class="btn btn-primary-custom">Atender</a>
                   {% elif turns == "U" %}
                   <a href="{% url 'cancelTurn' turn_id=turn.id %}" class="btn btn-primary-custom">Cancelar</a>
                   {% endif %}
