--- a/src/OMD/OMDApp/templates/form_iterator.html
+++ b/src/OMD/OMDApp/templates/form_iterator.html
@@ -3,11 +3,13 @@
         <label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
         {% if field.field.widget.input_type == 'date' %}
             <input type="date" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
-                    name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+                    name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
                     {% if field.value %} value="{{ field.value|date:'Y-m-d' }}" {% endif %}>
+        {% elif field.field.widget.input_type == 'select' %}
+            {{ field }}
         {% else %}
             <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
-                name="{{ field.html_name }}" placeholder="{{ field.widget.attrs.placeholder }}"
+                name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
                 {% if field.value %} value="{{ field.value }}" {% endif %}>
         {% endif %}
         {% if field.help_text %}
