--- a/src/OMD/OMDApp/templates/turns/attend_turn.html
+++ b/src/OMD/OMDApp/templates/turns/attend_turn.html
@@ -43,7 +43,7 @@
                 {% if field.field.widget.input_type == 'number' %}
                     <input type="number" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
                             name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
-                            {% if field.value %} value="{{ field.value|floatformat:3 }}" {% endif %}>
+                            {% if field.value %} value="{{ field.value|stringformat:'.2f' }}" {% endif %}>
                 {% else %}
                     <input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
                         name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
