--- a/src/OMD/OMDApp/templates/dogs/history_clinic.html
+++ b/src/OMD/OMDApp/templates/dogs/history_clinic.html
@@ -4,11 +4,11 @@
 	<link rel="stylesheet" href="{% static 'css/form.css' %}">
 {% endblock css %}
 
-{% block title %}Libreta sanitaria{% endblock title %}
+{% block title %}Historial clínico{% endblock title %}
 {% block content %}
 {% if turns %}
   <div class="container py-5 form_width mb-5">
-      <h1 class="text-center fw-semibold mb-4 pb-3">{% if type == 'HB' %}Libreta sanitaria{% else %}Historial clínico{% endif %} de {{ name }}</h1>
+      <h1 class="text-center fw-semibold mb-4 pb-3">Historial clínico de {{ name }}</h1>
       <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
         <a href="{% url 'dog_profile' dog_id=dog_id %}" class="btn btn-secondary">Atrás</a>
       </div>
@@ -30,7 +30,7 @@
         {% endfor %}
     </div>
 {% else %}
-  <h1 class="text-center fw-semibold mb-5">Todavía no existe una {% if type == 'HB' %}libreta sanitaria{% else %}historia clínica{% endif %} para este perro.</h1>
+  <h1 class="text-center fw-semibold mb-5">Todavía no existe un historial clínico para este perro.</h1>
   <div class="d-grid gap-2 d-md-flex justify-content-md-center mt-auto py-4">
     <a href="{% url 'dog_profile' dog_id=dog_id %}" class="btn btn-secondary">Atrás</a>
   </div>
