--- a/src/OMD/OMDApp/templates/turns/select_urgency.html
+++ b/src/OMD/OMDApp/templates/turns/select_urgency.html
@@ -13,7 +13,7 @@
         <div class="container mt-5">
             <div class="row">
                 <div class="col-md-12 d-flex justify-content-center">
-                    <a href="{% url 'home' %}" class="btn btn-primary-custom mx-4 btn-lg">Cliente</a>
+                    <a href="{% url 'selectUser' %}" class="btn btn-primary-custom mx-4 btn-lg">Cliente</a>
                     <a href="{% url 'register' urgency=1 %}" class="btn btn-primary-custom mx-4 btn-lg">Visitante</a>
                 </div>
             </div>
