--- a/src/OMD/OMDApp/templates/dogs/health_book.html
+++ b/src/OMD/OMDApp/templates/dogs/health_book.html
@@ -83,21 +83,16 @@
                             </thead>
                             <tbody>
                                 {% for operacion in operaciones %}
-                                <tr>
-                                    <td>{{ turn_type_mapping|get_item:operacion.finalized.type }}</td>
-                                    <td>{{ operacion.finalized.date|date:'d/m/Y' }}</td>
-                                </tr>
-                                    {% if operacion.finalized.type == 'U' and operacion.finalized.urgency_turns %}
-                                        {% for o in operacion.finalized.urgency_turns %}
-                                        <tr>
+                                    </tr>
+                                        {% if operacion.finalized.type == 'U' %}
+                                            <td>Urgencia</td>
+                                        {% else %}
                                             <td>{{ turn_type_mapping|get_item:operacion.finalized.type }}</td>
-                                            <td>{{ o.finalized.date|date:'d/m/Y' }}</td>
-                                        </tr>
-                                        {% endfor %}
-                                    {% endif %}
+                                        {% endif %}
+                                        <td>{{ operacion.finalized.date|date:'d/m/Y' }}</td>
+                                    </tr>
                                 {% empty %}
-                                <tr>
-                                    <td colspan="2" class="text-center">No se encontraron operaciones.</td>
+                                    <td colspan="2" class="text-center">No se encontraron intervenciones.</td>
                                 </tr>
                                 {% endfor %}
                             </tbody>
