--- a/src/OMD/OMDApp/templates/navbar.html
+++ b/src/OMD/OMDApp/templates/navbar.html
@@ -56,11 +56,9 @@
               </ul>
             </li>
           {% endif %}
-          {% if perms.OMDApp.is_vet %}
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/">Donaciones</a>
+              <a class="nav-link" aria-current="page" href="{% url 'viewCampaigns' %}">Donaciones</a>
             </li>
-          {% endif %}
           <li class="nav-item">
               <a class="nav-link" aria-current="page" href="/">Nosotros</a>
           </li>
