[FIX] arreglo estado de campaña [ADD] estado de campaña

--- a/src/OMD/OMDApp/templates/donations/donations.html
+++ b/src/OMD/OMDApp/templates/donations/donations.html
@@ -9,4 +9,5 @@
 {% block content %}
     <div class="container py-5 form_width mb-5">
         <h1 class="text-center fw-semibold mb-4 pb-3">{% if perms.OMDApp.is_client %} Mis {% endif %}Donaciones{% if perms.OMDApp.is_vet  %} hechas {% endif %}</h1>
+    </div>
 {% endblock content %}
