--- a/src/OMD/OMDApp/templates/donations/make_donation.html
+++ b/src/OMD/OMDApp/templates/donations/make_donation.html
@@ -9,12 +9,15 @@
 <body class="form-signin w-100 m-auto">
 	<div class="container py-5 form_width">
 		<h1 class="text-center fw-semibold mb-4">Ingrese sus datos</h1>
-		<form method="POST">
+		<form method="POST" novalidate>
 			{% csrf_token %}
 
 			{% for field in form %}
 				<div class="mb-3">
-					{{ field.label_tag }} {{ field }}
+					<label for="{{ field.id_for_label }}" class="form-label">{{ field.label }}</label>
+					<input type="{{ field.field.widget.input_type }}" class="form-control {% if field.errors %}is-invalid{% endif %}" id="{{ field.id_for_label }}"
+						name="{{ field.html_name }}" placeholder="{{ field.field.widget.attrs.placeholder }}"
+						>
 					{% if field.help_text %}
 						<small class="form-text text-muted">{{ field.help_text|safe }}</small>
 					{% endif %}
